feat(packages): create scaffold and add autobrr
